--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
   };
 
   var getWizardY = function(gameFieldHeight) {
-    return gameFieldHeight;
+    return gameFieldHeight / 3;
   };
 </script>
 <script src="js/game.js"></script>
