--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
   var fireballSize = 22;
 
   var getFireballSpeed = function(isMovingLeft) {
-    isMovingLeft ? 2 : 5;
+    return  isMovingLeft ? 2 : 5;
+
   };
 
   var wizardSpeed = 3;
@@ -203,6 +204,7 @@
     return gameFieldHeight / 3;
   };
 </script>
+<script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 
 </body>
