--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
   <div class="demo"></div>
 
   <div class="setup-open">
-    <img src="img/user-1.jpg" class="setup-open-icon">
+    <img src="img/user-1.jpg" class="setup-open-icon" tabindex="0">
   </div>
 </header>
 
 <div class="overlay setup hidden">
-  <form class="setup-wizard-form"
+  <form action="https://javascript.pages.academy/code-and-magick" method="POST" enctype="multipart/form-data" class="setup-wizard-form"
         method="post"
         enctype="multipart/form-data"
         autocomplete="off">
@@ -79,13 +79,11 @@
           <input type="file" name="avatar">
         </div>
         <label>
-          <input type="text" name="username"
-                 maxlength="25" required
-                 class="setup-user-name" value="Синий Пендальф"/>
+          <input type="text" name="username" minlength="2" maxlength="25" required class="setup-user-name" value="Синий Пендальф"/>
         </label>
       </div>
 
-      <span class="setup-close">&times;</span>
+      <span class="setup-close" tabindex="0">&times;</span>
     </div>
 
 
@@ -154,7 +152,7 @@
         <div class="setup-similar-list"><!--Список похожих персонажей--></div>
       </div>
 
-      <button class="button setup-submit">Сохранить</button>
+      <button type="submit" class="button setup-submit">Сохранить</button>
     </div>
   </form>
 </div>
